read structure dimensions and remove from json, check if structure file exists and is within size for compatibility